styed HTML content

--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,15 @@ a{
 }
 
 #hero-section{
-    width: 50%;
+    width: 70%;
     border: 1px solid black;
 }
 
 .card{
     border: transparent;
+    background-color: transparent;
+}
+
+#col1{
+    border-right: 2px solid rgb(14, 11, 11);
 }
